# pixtreme

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py  setup.sh
src/pixtreme_source/: __init__.py
src/pixtreme_source/color/: aces_transform.py  apply_lut.py  bgr.py  grayscale.py  hsv.py  read_lut.py  uyvy422.py  uyvy422_ndi.py  ycbcr.py  yuv420.py  yuv422p10le.py
src/pixtreme_source/face/: detection.py  emap.py  embedding.py  paste.py  schema.py  swap.py
src/pixtreme_source/filter/: gaussian.py
src/pixtreme_source/io/: imread.py  imshow.py  imwrite.py
src/pixtreme_source/transform/: affine.py  erode.py  resize.py  schema.py
src/pixtreme_source/transform/interporation/: area.py  bicubic.py  bilinear.py  lanczos.py  mitchell.py  nearest.py
src/pixtreme_source/upscale/: convert.py  tile.py
src/pixtreme_source/upscale/core/: onnx.py  torch.py  trt.py
src/pixtreme_source/utils/: blob.py  dlpack.py  dtypes.py
tests/: test_color_conversions.py  test_dlpack.py  test_dtypes.py  test_filters.py  test_gaussian.py  test_io.py  test_resize.py  test_transform.py  test_upscale_onnx.py  test_upscale_trt.py
